Fixed some text alignment and added tester values.

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ section > p, h3 {
 article {
 	width: 800px;
 	height: 400px;
-	margin: 15px auto 160px;
+	margin: 15px auto 90px;
 	background-color: white;
 }
 
